# trace-ai

./: .gitignore
lauko_app/: App.tsx  package-lock.json  package.json
lauko_app/services/: api.ts  supabase.ts
lauko_backend/: package-lock.json  pyproject.toml
lauko_backend/app/: main.py
lauko_backend/app/api/: endpoints.py
lauko_backend/app/core/: config.py  database.py
lauko_backend/app/schemas/: chat.py
trace_backend/: .gitignore  pyproject.toml  trace_data.db
trace_backend/app/: main.py
trace_backend/app/api/: endpoints.py
trace_backend/app/core/: config.py  database.py  llm_manager.py
trace_backend/app/models/: chat_history.py
trace_backend/app/schemas/: chat.py
